<resources>
    <string name="app_name">SongWiki</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_title">Artists</string>
    <string name="track_title">Tracks</string>
    <string name="album_title">ALBUM</string>
    <string name="rihanna">Rihanna</string>
    <string name="favourite_artists">Favourite Artists</string>
    <string name="artist">Rihanna</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="img">img</string>
    <string name="no_network">No Network Connectivity!</string>
    <string name="no_data">No Data!</string>
    <string name="summary">Taylor Swift (born December 13, 1989 in Wyomissing, Pennsylvania) is an American country pop singer-songwriter and actress. Swift is a 10-time Grammy winner with a total of 23 nominations (Feb 2016). \n\nIn 2006, she released her debut single \"Tim McGraw\", then her self-titled debut album, which was subsequently certified multi-platinum by the Recording Industry Association of America.\n\nIn November 2008, Swift released her second album, Fearless, which featured a number of more pop oriented songs such as \"You Belong With Me\" and \"Love Story\"</string>
    <string name="summary_head">Summary</string>
    <string name="content_head">Content</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="similar_tracks">Similar Tracks</string>
    <string name="similar_artists">Similar Artists</string>
    <string name="share">Share</string>
    <string name="published">Published :</string>
    <string name="top_artists">Top Artists</string>
    <string name="artist_image">Artist image</string>
    <string name="top_results">Top Results</string>
    <string name="no_connectivity">No Connectivity!</string>
    <string name="removed_From_fav">removed from favourites</string>
    <string name="made_favourite">Made favourite</string>
    <string name="write_permission">Write permission not granted</string>
    <string name="album_cover">Album Cover</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="top_tracks_limit_title">Number of Top Tracks</string>
    <string name="top_artists_limit_title">Number of Top Artists</string>
    <string name="default_limit">30</string>
    <string name="default_country">United States</string>
    <string name="country">Country</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="no_favourites_yet">No favourites yet!</string>
    <string name="song_wiki">SongWiki</string>
    <string name="press_back">Press back again!</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="choose_one">Choose one</string>
    <string name="sharing_description">Check out this cool application\t</string>
    <string name="version_1_0">Version : 1.0</string>
    <string name="author">Author</string>
    <string name="lp">Lakshmiprasad</string>
    <string name="version">Version</string>
    <string name="author_location">Bengaluru, India</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="github">Github</string>
    <string name="give_feedback">Give feedback</string>
    <string name="default_language">en</string>
    <string name="my_playlist">My Playlist</string>
    <string name="added">Successfully added! </string>
    <string name="removed">Successfully Removed! </string>
    <string name="search_label">Search SongWiki</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="network_connected">Connected to network!</string>
    <string name="description_language">Artist description language</string>
</resources>
